# FastApiEmail

FastApiEmail/: pyproject.toml
