[tool.poetry]
name = "fastapiemail"
version = "0.1.0"
description = ""
authors = ["kevinkennedy <@kennedy.kev@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
